--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeng": "^11.0.0-rc.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuidv4": "^6.2.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
