--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.0.0-rc.1",
+    "primeflex": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuidv4": "^6.2.5",
