--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@ngstack/code-editor": "^2.1.1",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.0.0-rc.1",
-    "primeflex": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuidv4": "^6.2.5",
